fixed 된 태그에 z-index추가

--- a/css/layout.css
+++ b/css/layout.css
@@ -40,6 +40,7 @@ body{background-color:#eee7e0;}
     }
     .independent_wrap{
         position:fixed;
+        z-index:1;
         right:-100px;
         top:200px;
         transform:rotate(90deg);
